UI, Misc: Add more information to log and about section
Added @KaiLee2588 to list of translation
Added branch, plugin version and commit hash to log and about section

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,6 +42,25 @@ if (NOT LASTFM_CREDS)
     message(WARNING "Missing Last.fm API info")
 endif()
 
+# Get the current working branch
+execute_process(
+    COMMAND git rev-parse --abbrev-ref HEAD
+    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+    OUTPUT_VARIABLE GIT_BRANCH
+    OUTPUT_STRIP_TRAILING_WHITESPACE)
+
+# Get the latest commit hash
+execute_process(
+    COMMAND git rev-parse --short HEAD
+    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+    OUTPUT_VARIABLE GIT_COMMIT_HASH
+    OUTPUT_STRIP_TRAILING_WHITESPACE)
+
+target_compile_definitions(${PROJECT_NAME} PRIVATE
+    "-DGIT_BRANCH=\"${GIT_BRANCH}\"")
+target_compile_definitions(${PROJECT_NAME} PRIVATE
+"-DGIT_COMMIT_HASH=\"${GIT_COMMIT_HASH}\"")
+
 mark_as_advanced(LASTFM_CREDS)
 mark_as_advanced(CREDS)
 add_definitions(-DSPOTIFY_CREDENTIALS=\"${CREDS}\")
