--- a/deps/CMakeLists.txt
+++ b/deps/CMakeLists.txt
@@ -378,7 +378,11 @@ set_target_properties(tag PROPERTIES LINKER_LANGUAGE CXX)
 
 if (APPLE)
 target_compile_options(tag
-  PUBLIC $<$<COMPILE_LANGUAGE:CXX>:-Wno-shorten-64-to-32 -Wno-unused-parameter>
+  PUBLIC $<$<COMPILE_LANGUAGE:CXX>:-Wno-everything>
+)
+elseif(UNIX AND NOT APPLE)
+target_compile_options(tag
+  PUBLIC -w
 )
 endif()
 
