CI: Even less warnings

--- a/deps/CMakeLists.txt
+++ b/deps/CMakeLists.txt
@@ -381,6 +381,9 @@ target_compile_options(tag
   PUBLIC $<$<COMPILE_LANGUAGE:CXX>:-Wno-everything>
 )
 elseif(UNIX AND NOT APPLE)
+target_compile_options(mpdclient
+  PUBLIC -w
+)
 target_compile_options(tag
   PUBLIC -w
 )
