CI: Noooo waaaarniiinnngs

--- a/deps/CMakeLists.txt
+++ b/deps/CMakeLists.txt
@@ -380,6 +380,9 @@ if (APPLE)
 target_compile_options(tag
   PUBLIC $<$<COMPILE_LANGUAGE:CXX>:-Wno-everything>
 )
+target_compile_options(mpdclient
+  PUBLIC $<$<COMPILE_LANGUAGE:CXX>:-Wno-everything>
+)
 elseif(UNIX AND NOT APPLE)
 target_compile_options(mpdclient
   PUBLIC -w
