--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,8 @@ include("${CMAKE_CURRENT_SOURCE_DIR}/cmake/common/bootstrap.cmake" NO_POLICY_SCO
 
 project(${_name} VERSION ${_version})
 
+set(CMAKE_COMPILE_WARNING_AS_ERROR OFF)
+
 option(ENABLE_FRONTEND_API "Use obs-frontend-api for UI functionality" ON)
 option(LOCAL_INSTALLATION "Copy to ~/.config/obs-studio/plugins after build" OFF)
 option(ENABLE_QT "Use Qt functionality" OFF)
